<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    tools:context=".mysteryWalks.MysteryWalks">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="@dimen/back_button_size"
        android:layout_height="@dimen/back_button_size"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button_border"
        android:contentDescription="@string/back_desc"
        android:padding="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRVWalks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/hintingGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="distance,giveup,hint_number,next,prev,textView2,hint_container" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/current_distance"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/tutorial_text_size"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <Button
        android:id="@+id/giveup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:minHeight="60dp"
        android:text="@string/give_up"
        android:textSize="@dimen/body_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hint_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/hint_1"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/huge_text_size"
        app:layout_constraintBottom_toTopOf="@+id/giveup"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintTop_toBottomOf="@id/hint_container" />

    <Button
        android:id="@+id/next"
        android:layout_width="@dimen/action_button_size"
        android:layout_height="@dimen/action_button_size"
        android:layout_marginEnd="32dp"
        android:text="@string/next"
        android:textSize="12sp"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/giveup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint_container" />

    <Button
        android:id="@+id/prev"
        android:layout_width="@dimen/action_button_size"
        android:layout_height="@dimen/action_button_size"
        android:layout_marginStart="32dp"
        android:text="@string/prev"
        android:textSize="12sp"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/giveup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint_container" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/look_around"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/tutorial_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <TextView
        android:id="@+id/hint_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/hint"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textSize="@dimen/large_hint_text_size"
        app:layout_constraintBottom_toTopOf="@+id/hint_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/location_error_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000"
        android:elevation="10dp"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cannot get location. Please check your GPS settings."
            android:textColor="#FFFFFF"
            android:textSize="@dimen/body_text_size"
            android:gravity="center"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/error_ok_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

        <Button
            android:id="@+id/error_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/error_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>